syntax = "proto3";
package sports;

option go_package = "/sports";

import "google/protobuf/timestamp.proto";

service Sports {
  // ListEvents will return a collection of all events.
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {}

}

message ListEventsRequest {
  string order_by = 1;
}


// Response to ListSport call.
message ListEventsResponse {
  repeated Event event = 1;
}



/* Resources */

// A sport resource.
message Event {
  // ID represents a unique identifier for the sport.
  int64 id = 1;
  // Name is the official name given to the sport.
  string name = 2;
  // Number represents the number of the sport.
  // AdvertisedStartTime is the time the sport is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 3;
}

